@@ -129,8 +129,10 @@ footer {
             display: inline-block; vertical-align: top;
         }
         .panel {
-            display: flex; flex-wrap: wrap;
-            gap: 1rem; justify-content: space-evenly;
+            display: flex; gap: 1rem;
+            .block-container {
+                display: flex; flex-direction: column; gap: 1rem;
+            }
         }
     }
     .centred {
